# pdf-parser

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
hi_pdf_parser/: __main__.py  app.py  artifact_writer.py  command_envelope.py  command_runner.py  datamodel.py  envelope.py  errors.py  logging_setup.py  page_range.py  parse_runner.py  parse_runtime.py  parser.py  parser_factory.py  runner.py
hi_pdf_parser/cli/: __init__.py  envelope.py  errors.py  logging_setup.py  output_writer.py  runner.py
pdf_parser/: __main__.py  app.py  config.py  datamodel.py  parser.py  settings.py
pdf_parser/cli/: __init__.py  envelope.py  errors.py  logging_setup.py  main.py  output_writer.py  page_range.py  runner.py
pdf_parser/utils/: hash.py  image.py  table.py
skills/hi-pdf-parser/: SKILL.md
skills/hi-pdf-parser/evals/: evals.json
skills/litepdf/: SKILL.md
skills/litepdf/evals/: evals.json
skills/pdf-parser/: SKILL.md
skills/pdf-parser/evals/: evals.json
tests/: test_app.py  test_commands.py  test_logging_setup.py  test_parse_runtime.py  test_parser_construction.py  test_parser_factory.py
